syntax = "proto3";

package grpc;
option go_package = "/proto";

service GetCpuSystemUsageService {
    rpc GetCpuSystemUsage (GetCpuSystemUsageRequest) returns (GetCpuSystemUsageResponse);
}

message GetCpuSystemUsageRequest {
    int64 date_from = 1;
    int64 date_to = 2;
}

message GetCpuSystemUsageResponse {
    string cpu = 1;
    double avg_usage = 2;
    double max_usage = 3;
    double min_usage = 4;
}

